[package]
name = "disk_image"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
bootloader-locator = "0.0.4"
runner-utils = "0.0.2"
locate-cargo-manifest = "0.2.0"
